add more config in pom.xml, add checkstyle support.

--- a/src/main/resources/config.json.sample
+++ b/src/main/resources/config.json.sample
@@ -1,7 +1,10 @@
 {
-  "weixin":{
-    "templateMessageId":"SU5mIWGfhdeO9BMzNbnpeCnXg_i7lZOcFx5QsMhBI1M",
-    "appId":"your app id",
-    "appSecret":"your app secret"
+  "weixin": {
+    "appId": "your app id",
+    "appSecret": "your app secret",
+    "templateMessageId": "SU5mIWGfhdeO9BMzNbnpeCnXg_i7lZOcFx5QsMhBI1M",
+    "receivers": [
+      "the recevier openid"
+    ]
   }
 }
